--- a/WebContent/listaRedeReferencia.xhtml
+++ b/WebContent/listaRedeReferencia.xhtml
@@ -31,7 +31,7 @@
 					<p:selectOneMenu value="#{itemValorBean.nomeConveniado}"
 						effect="fade" id="prestador">
 						<f:selectItem itemLabel="Selecionar" noSelectionOption="true" />
-						<f:selectItems value="#{itemValorBean.conveniados}" var="c"
+						<f:selectItems value="#{itemValorBean.conveniadosRedeReferencia}" var="c"
 							itemValue="#{c.nome}" itemLabel="#{c.nome}" />
 					</p:selectOneMenu>
 					<br></br>
